--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.toja</groupId>
-    <artifactId>game</artifactId>
+    <artifactId>gameSelector</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -38,7 +38,6 @@
             <version>5.14.0</version>
             <scope>test</scope>
         </dependency>
-
 
     </dependencies>
 
